crates/serde-feather/tests/ui/enum_generic.rs
use serde_feather::FeatherDeserialize;

#[derive(FeatherDeserialize)]
enum GenericEnum<T> {
    Unit,
    Payload(T),
}

fn main() {}
